fixed detail page to show all of column section, title was not showing on top

--- a/cume-client/src/components/BeerInfo.css
+++ b/cume-client/src/components/BeerInfo.css
@@ -1,5 +1,6 @@
 .ui.card {
     width: 40%;
+    margin-top: 10%;
 }
 
 .ui.segment:last-child {
@@ -8,7 +9,9 @@
     border-radius:  0;
 }
 
-
+.ui.centered.grid, .ui.centered.grid>.row, .ui.grid>.centered.row {
+    margin-top: 10%;
+}
 
 .infoTitle {
     margin-top: 5%;
@@ -24,5 +27,7 @@
 
 
 @media only screen and (max-width: 480px)  {
-    
+   .ui.column.grid>[class*="sixteen wide"].column, .ui.grid>.column.row>[class*="sixteen wide"].column, .ui.grid>.row>[class*="sixteen wide"].column, .ui.grid>[class*="sixteen wide"].column {
+        margin-top: 25%;
+    }
 }
